--- a/index.html
+++ b/index.html
@@ -8,7 +8,41 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <header class="header"></header>
+  <header class="header">
+    <div class="container">
+      
+      <input type="checkbox" id="checkbox3" class="checkbox3 visuallyHidden">
+      <label for="checkbox3">
+          <div class="hamburger hamburger3">
+              <span class="bar bar1"></span>
+              <span class="bar bar2"></span>
+              <span class="bar bar3"></span>
+              <span class="bar bar4"></span>
+          </div>
+      </label>
+
+  </div>
+    <ul class="menu">
+      <li class="menu__link-wrap">
+        <a class="menu__link" href="#">Главная</a>
+      </li>
+      <li class="menu__link-wrap">
+        <a class="menu__link" href="#">Не главная</a>
+      </li>
+      <li class="menu__link-wrap">
+        <a class="menu__link" href="#">Еще какая-то</a>
+      </li>
+      <li class="menu__link-wrap">
+        <a class="menu__link" href="#">Ниоком</a>
+      </li>
+      <li class="menu__link-wrap">
+        <a class="menu__link" href="#">Последняя</a>
+      </li>
+    </ul>
+  </div>
+    
+  </header>
+  
   <section class="first">
     <h1 class="first-title">Lorem ipsum dolor sit amet</h1>
 
